# harpchat

./: .envrc.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
migrations/: 20250219141402_conversations.sql  20250219141410_messages.sql  20250219194806_notify_message_on_create.sql
src/: ai.rs  db.rs  error.rs  main.rs  state.rs  web.rs
src/model/: conversations.rs  messages.rs  mod.rs
src/web/: routes.rs  views.rs
src/web/views/: conversation_detail.rs  conversations.rs  icons.rs  index.rs
static/: style.css
styles/: style.css
