[package]
name = "harpchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = {version="0.8.1", features=["macros"]}
chrono = "0.4.39"
genai = "0.1.22-WIP"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = {version="0.8.3", features=["runtime-tokio-rustls", "postgres"]}
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["env-filter"]}

[patch.crates-io]
genai = {git = "https://github.com/vagmi/rust-genai.git"}
