[package]
name = "harpchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = {version="0.8.1", features=["macros"]}
chrono = "0.4.39"
futures = "0.3.31"
genai = "0.1.22-WIP"
indexmap = "2.7.1"
markdown = "1.0.0-alpha.22"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = {version="0.8.3", features=["runtime-tokio-rustls", "postgres", "chrono", "json"]}
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = {version="0.1.17", features=["full"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["env-filter"]}

[patch.crates-io]
genai = {git = "https://github.com/vagmi/rust-genai.git"}
